<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <include layout="@layout/dialog_item_header" />

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="10dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

            <com.example.errorquestion.view.BaseTextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    app:tv_font_size="14"
                    app:tv_title="@string/tips" />

            <TextView
                    android:id="@+id/tvContext"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="16dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="right"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

        <com.example.errorquestion.view.BaseButton
                android:id="@+id/btnExitCancel"
                style="@style/BaseButton"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/btn_cancel"
                android:textColor="@color/white"
                app:bg_color="@color/theme_color"
                app:bg_corner="5dp" />

        <com.example.errorquestion.view.BaseButton
                android:id="@+id/btnExitSure"
                style="@style/BaseButton"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text="@string/btn_sure"
                android:textColor="@color/white"
                app:bg_color="@color/theme_color"
                app:bg_corner="5dp" />
    </LinearLayout>


</LinearLayout>