<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/ivEnterError"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/test" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/recommend"
                    android:textColor="@color/black"
                    android:textSize="17dp"
                    android:textStyle="bold" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_error_explain" />

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginBottom="3dp"
                            android:layout_weight="1"
                            android:src="@drawable/ic_error_page" />

                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginTop="3dp"
                            android:layout_weight="1"
                            android:src="@drawable/ic_error_review" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/enter_num"
                    android:textColor="@color/black"
                    android:textSize="17dp"
                    android:textStyle="bold" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginRight="5dp"
                        app:cardCornerRadius="10dp">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                        <TextView
                                style="@style/TextView"
                                android:gravity="left|bottom"
                                android:paddingBottom="3dp"
                                android:text="@string/enter_error" />

                        <TextView
                                style="@style/TextView"
                                android:gravity="left|top"
                                android:paddingTop="3dp"
                                android:text="5题"
                                android:textColor="@color/black"
                                android:textStyle="bold"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:cardCornerRadius="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                        <TextView
                                style="@style/TextView"
                                android:gravity="left|bottom"
                                android:paddingBottom="3dp"
                                android:text="@string/enter_error" />

                        <TextView
                                style="@style/TextView"
                                android:gravity="left|top"
                                android:paddingTop="3dp"
                                android:text="5题"
                                android:textColor="@color/black"
                                android:textStyle="bold"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:cardCornerRadius="10dp"
                        android:layout_marginLeft="5dp">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                        <TextView
                                style="@style/TextView"
                                android:gravity="left|bottom"
                                android:paddingBottom="3dp"
                                android:text="@string/enter_error" />

                        <TextView
                                style="@style/TextView"
                                android:gravity="left|top"
                                android:paddingTop="3dp"
                                android:text="5题"
                                android:textColor="@color/black"
                                android:textStyle="bold"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/enter_ranking"
                    android:textColor="@color/black"
                    android:textSize="17dp"
                    android:textStyle="bold" />
            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>